--- a/Sweavetest/vignettes/Sweavetest.bib
+++ b/Sweavetest/vignettes/Sweavetest.bib
@@ -22,3 +22,44 @@
   R package version 0.8.1.},
   url = {http://CRAN.R=projectorg/package=odfWeave}
 }
+
+@article{Grun09,
+  title = {Automatic Generation of Exams in {R}},
+  author = {Bettina Gr\"un and Achim Zeileis},
+  journal = {Journal of Statistical Software},
+  year = {2009},
+  volume = {29},
+  number = {10},
+  pages = {1--14},
+  url = {http://www.jstatsoft.org/v29/i10/}
+}
+
+@TechReport{Zeileis12,
+  title = {Flexible Generation of E-Learning Exams in {R}: {Moodle} Quizzes, {OLAT} Assessments, and Beyond},
+  author = {Achim Zeileis and Nikolaus Umlauf and Friedrich Leisch},
+  institution = {Working Papers in Economics and Statistics, Research Platform Empirical
+  		  and Experimental Economics, Universit\"at Innsbruck},
+  year = {2012},
+  type = {Working Paper},
+  number = {2012-27},
+  month = {December},
+  url = {http://EconPapers.RePEc.org/RePEc:inn:wpaper:2012-27}
+}
+
+@article{Macleod03,
+  title = {Multiple-Choice Randomization},
+  author = { Ian McLeod and Ying Zhang and Hao Yu },
+  journal = {Journal of Statistics Education},
+  year = 2003,
+  volume = {11},
+  number = {1},
+  url = {http://www.amstat.org/publications/jse/v11n1/mcleod.html}
+}
+
+@Manual{Lees13,
+  title = {ProfessR: Grades Setting and Exam Maker},
+  author = {Jonathan M. Lees},
+  year = {2013},
+  note = {R package version 2.1},
+  url = {http://CRAN.R-project.org/package=ProfessR}
+}
