--- a/Sweavetest/inst/sample/SampleTest.Rnw
+++ b/Sweavetest/inst/sample/SampleTest.Rnw
@@ -18,8 +18,8 @@
 <<>>=
 set.seed(18)
 library(Sweavetest)  # Should come after set.seed, to make reproducible.
-Initialization("SampleTest", "Report", scanex="sample.dat")
-testversion(1)
+Initialization("SampleTest", "Teacher", scanex="sample.dat")
+testversion(0)
 @
 
 \pagestyle{myheadings}
